# DiscordStoryBot

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy_to_raspberry_pi  index.js  package-lock.json  package.json
.github/workflows/: rust.yml
runner/: Cargo.toml  README.md
runner/samples/: ABCD_tags.ink  author.ink  choices.ink  choices_with_conditionals.ink  choices_with_hidden_text.ink  comments.ink  const.ink  fallbacks.ink  glue.ink  hidden_choice_text.ink  image.ink  london.ink  london2.ink  recursive.ink  stitches.ink  stitches_advanced.ink  stitches_with_choices.ink  story1.ink  story_with_variables.ink
runner/src/: ink_lexer.rs  ink_lexer_tests.rs  ink_parser.rs  ink_parser_tests.rs  ink_runner.rs  ink_runner_tests.rs  lib.rs
src/: lib.rs  main.rs
stories/: basic_story.ink  hidden_choice_text.ink  hide_choices.ink  images.ink  story1.ink
stories/basic_story/: basic_story.ink
stories/christmas_2021/: christmas.ink  gdd.md
stories/christmas_2021/game design/: gdd.md
stories/christmas_2021/img/game_art/: licenses.md
stories/hide_choices/: hide_choices.ink
stories/images/: images.ink
stories/story1/: castle_lowres.jpg.txt  story1.ink
stories/the_cave/: the_cave.ink
