[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Matt Woelk <matt@mattwoelk.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.1"
inkling = {git = "https://github.com/MattWoelk/inkling.git", branch = "threading"}