[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Matt Woelk <matt@mattwoelk.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
ink_runner = { path = "../rust/inkparserchumsky"}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1.8.0"
structopt = "0.3.25"