[package]
name = "discord_story_bot"
version = "0.2.0"
authors = ["Matt Woelk <matt@mattwoelk.ca>"]
edition = "2021"
description = "A discord bot that runs .ink stories."
repository = "https://github.com/MattWoelk/DiscordStoryBot"
license = "MIT"
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]

[workspace]
resolver = "2"
members = [".", "runner"]


[dependencies]
ink_runner = { path = "runner", version = "0.1.0"}
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1.8.0"
clap = { version = "3.0.0", features = ["derive"] }
walkdir = "2"

[dev-dependencies]
pretty_assertions = "1.0"